# Obj-WM

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  run.sh  xinitrc
.cache/clangd/index/: keybindings.hpp.0D523F7F80816041.idx  main.cpp.E3BF34F5A2970A2B.idx  window.cpp.F59F7537632EF3D7.idx  window.hpp.E934B50D56AA571F.idx  window_manager.cpp.4E472190B00471D5.idx  window_manager.hpp.AA9E3F6EA299BDF8.idx  workspaces.cpp.BA0DF5C16111065D.idx  workspaces.hpp.95DD5CBE6A820844.idx
inc/: window.hpp  window_manager.hpp  workspaces.hpp
src/: main.cpp  manager.cpp  window.cpp  window_manager.cpp  workspaces.cpp
